package com.erikriosetiawan;

// The interface that all flying behavior classes implement.
public interface FlyBehavior {
    void fly();
}
