package com.erikriosetiawan;

public class FlyWithWings implements FlyBehavior {

    // Flying behavior implementation for ducks that do fly...
    @Override
    public void fly() {
        System.out.println("I'm flying!!");
    }
}
