package com.erikriosetiawan;

public interface QuackBehavior {
    void quack();
}
