@startuml

title __ERIKRIOSETIAWAN's Class Diagram__\n

  namespace com.erikriosetiawan {
    abstract class com.erikriosetiawan.Duck {
        + Duck()
        {abstract} + display()
        + performFly()
        + performQuack()
        + setFlyBehavior()
        + setQuackBehavior()
        + swim()
    }
  }
  

  namespace com.erikriosetiawan {
    interface com.erikriosetiawan.FlyBehavior {
        {abstract} + fly()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyNoWay {
        + fly()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyRocketPowered {
        + fly()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyWithWings {
        + fly()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MallardDuck {
        + MallardDuck()
        + display()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MiniDuckSimulator {
        {static} + main()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.ModelDuck {
        + ModelDuck()
        + display()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MuteQuack {
        + quack()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.Quack {
        + quack()
    }
  }
  

  namespace com.erikriosetiawan {
    interface com.erikriosetiawan.QuackBehavior {
        {abstract} + quack()
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.Squeak {
        + quack()
    }
  }
  

  com.erikriosetiawan.Duck o-- com.erikriosetiawan.FlyBehavior : flyBehavior
  com.erikriosetiawan.Duck o-- com.erikriosetiawan.QuackBehavior : quackBehavior
  com.erikriosetiawan.FlyNoWay .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.FlyRocketPowered .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.FlyWithWings .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.MallardDuck -up-|> com.erikriosetiawan.Duck
  com.erikriosetiawan.ModelDuck -up-|> com.erikriosetiawan.Duck
  com.erikriosetiawan.MuteQuack .up.|> com.erikriosetiawan.QuackBehavior
  com.erikriosetiawan.Quack .up.|> com.erikriosetiawan.QuackBehavior
  com.erikriosetiawan.Squeak .up.|> com.erikriosetiawan.QuackBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
